<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sound"
            android:icon="@drawable/ic_baseline_volume_up_24"
            android:title="@string/menu_sound"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_phone_24"
            android:title="@string/menu_phone"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_map"/>
        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/ic_baseline_web_24"
            android:title="@string/menu_web"/>
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_mail"/>
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_calendar"/>
        <item
            android:id="@+id/nav_GPS"
            android:icon="@drawable/ic_baseline_gps_fixed_24"
            android:title="@string/menu_location"/>
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_baseline_photo_camera_24"
            android:title="@string/menu_camara"/>
    </group>
</menu>