<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_sound">

    <fragment
        android:id="@+id/nav_sound"
        android:name="com.example.lec08.ui.home.HomeFragment"
        android:label="@string/menu_sound"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.lec08.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.lec08.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_mail"
        android:name="com.example.lec08.mail"
        android:label="@string/menu_mail"
        tools:layout="@layout/fragment_mail" />

    <fragment
        android:id="@+id/nav_web"
        android:name="com.example.lec08.Web"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web" />
</navigation>