<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mail">

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_to"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/et_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvAsunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_subject"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/et_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_message"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/btEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_email_24" />
</LinearLayout>